--- a/css/event/event.scss
+++ b/css/event/event.scss
@@ -173,243 +173,146 @@ img {
                 }
             }
         }
+
+        .program {
+            width: 70%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            flex-wrap: wrap;
+
+            .keteranganProgram {
+                width: 100%;
+                /* background-color: red; */
+                padding: 10px 0;
+                border-bottom: 4px solid #e4e4e7;
+                background-color: var(--putih-f8fafc);
+                top: 10vh;
+                position: sticky;
+                align-self: flex-start;
+                margin-bottom: 30px;
+                z-index: 999999;
+
+                span {
+                    color: #3629a7;
+                    position: relative;
+                    padding: 0 20px;
+                    font-weight: 600;
+                    cursor: pointer;
+                }
+            }
+
+            .sorting {
+                width: 100%;
+                height: 100%;
+                display: none;
+                align-items: center;
+                justify-content: space-between;
+
+                .filter {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 10px 15px;
+                    color: #4a4b4c;
+                    border-radius: 7px;
+                    border: var(--border);
+                    background-color: var(--putih-f8fafc);
+                    cursor: pointer;
+
+                    h2 {
+                        margin-left: 10px;
+                        font-size: 1rem;
+                    }
+                }
+            }
+
+            .sudahBerakhir {
+                width: 100%;
+                height: 70vh;
+                display: none;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+
+                h1 {
+                    font-size: 2rem;
+                    text-align: center;
+                    margin-top: 20px;
+                    color: #CE231C;
+                }
+            }
+
+            .masihBerlangsung {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                // align-items: center;
+                flex-wrap: wrap;
+
+                .perMasihBerlangsung {
+                    width: calc(90%/2);
+                    max-height: 700px;
+                    background-color: var(--putih);
+                    border: var(--border);
+                    padding-bottom: 15px;
+                    border-radius: 10px;
+                    margin: 20px 10px;
+                    transition: .3s;
+                    position: relative;
+
+                    &:hover h2 {
+                        color: var(--biru-cerah);
+                    }
+
+                    h2 {
+                        font-size: 1.3rem;
+                        line-height: 27px;
+                        margin: 10px 0;
+                        padding: 0 10px;
+                        text-transform: capitalize;
+                    }
+
+                    h3 {
+                        font-size: 1.2rem;
+                        color: #CE231C;
+                        padding: 10px;
+                        margin: 10px 0 50px 0;
+                        font-weight: 600;
+                    }
+
+                    img {
+                        width: 100%;
+                        height: 250px;
+                        border-top-right-radius: 10px;
+                        border-top-left-radius: 10px;
+                        background-color: var(--putih-900);
+                    }
+
+                    p {
+                        font-size: 1rem;
+                        padding: 10px;
+                    }
+
+                    .btnEvent {
+                        position: absolute;
+                        left: 10px;
+                        right: 10px;
+                        bottom: 10px;
+
+                        button {
+                            width: 100%;
+
+                            :hover {
+                                opacity: .9;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.Event .container .program {
-    width: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-.Event .container .program .keteranganProgram {
-    width: 100%;
-    /* background-color: red; */
-    padding: 10px 0;
-    border-bottom: 4px solid #e4e4e7;
-    background-color: var(--putih-f8fafc);
-    top: 10vh;
-    position: sticky;
-    align-self: flex-start;
-    margin-bottom: 30px;
-    z-index: 999999;
-}
-
-.Event .container .program .keteranganProgram span {
-    color: #3629a7;
-    position: relative;
-    padding: 0 20px;
-    font-weight: 600;
-    cursor: pointer;
-}
-
-
-
-
-.EventMobile .program .sudahBerakhir {
-    width: 100%;
-    height: 70vh;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-
-
-.Event .container .program .sudahBerakhir {
-    width: 100%;
-    min-height: 70vh;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.EventMobile .program .sudahBerakhir h1,
-.Event .container .program .sudahBerakhir h1 {
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 20px;
-    color: #CE231C;
-}
-
-
-
-
-.EventMobile .program .masihBerlangsung,
-.Event .container .program .masihBerlangsung {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    // align-items: center;
-    flex-wrap: wrap;
-}
-
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung {
-    width: 100%;
-    background-color: var(--putih);
-    border: var(--border);
-    padding-bottom: 15px;
-    border-radius: 10px;
-    margin: 20px 0;
-}
-
-
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung:hover h2,
-.Event .container .program .masihBerlangsung .perMasihBerlangsung:hover h2 {
-    color: var(--biru-cerah);
-}
-
-
-.Event .container .program .masihBerlangsung .perMasihBerlangsung {
-    width: calc(90%/2);
-    max-height: 700px;
-    background-color: var(--putih);
-    border: var(--border);
-    padding-bottom: 15px;
-    border-radius: 10px;
-    margin: 20px 10px;
-    transition: .3s;
-    position: relative;
-}
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung img {
-    width: 100%;
-    height: 350px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.Event .container .program .masihBerlangsung .perMasihBerlangsung img {
-    width: 100%;
-    height: 250px;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-}
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung h2 {
-    font-size: 1.5rem;
-    line-height: 35px;
-    padding: 10px;
-    text-transform: capitalize;
-}
-
-.Event .container .program .masihBerlangsung .perMasihBerlangsung h2 {
-    font-size: 1.3rem;
-    line-height: 27px;
-    margin: 10px 0;
-    padding: 0 10px;
-    text-transform: capitalize;
-}
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung h3,
-.Event .container .program .masihBerlangsung .perMasihBerlangsung h3 {
-    font-size: 1.5rem;
-    color: #CE231C;
-    padding: 10px;
-    margin: 10px 0 50px 0;
-    font-weight: 600;
-}
-
-
-.Event .container .program .masihBerlangsung .perMasihBerlangsung h3 {
-    font-size: 1.2rem;
-}
-
-.EventMobile .masihBerlangsung .perMasihBerlangsung p {
-    font-size: 1.1rem;
-    padding: 10px;
-}
-
-
-.Event .container .program .masihBerlangsung .perMasihBerlangsung p {
-    font-size: 1rem;
-    padding: 10px;
-}
-
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung .btnEvent,
-.Event .container .program .masihBerlangsung .perMasihBerlangsung .btnEvent {
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-}
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung .btnEvent button:hover,
-.Event .container .program .masihBerlangsung .perMasihBerlangsung .btnEvent button:hover {
-    opacity: .9;
-}
-
-.EventMobile .program .masihBerlangsung .perMasihBerlangsung .btnEvent button,
-.Event .container .program .masihBerlangsung .perMasihBerlangsung .btnEvent button {
-    width: 100%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Event Mobile Start */
-.EventMobile {
-    width: 100%;
-    height: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    background-color: var(--putih-f8fafc);
-    display: none;
-}
-
-.EventMobile .keterangan {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 4px solid #e4e4e7;
-    margin-bottom: 20px;
-    padding: 10px 0;
-
-}
-
-.EventMobile .keterangan span {
-    width: 50%;
-    text-align: center;
-    color: #3629a7;
-    position: relative;
-    font-weight: 600;
-    cursor: pointer;
 }
 
 .EventMobile .sorting {
@@ -432,7 +335,6 @@ img {
     border: var(--border);
     background-color: var(--putih-f8fafc);
     cursor: pointer;
-
 }
 
 .EventMobile .sorting .filter h2 {
