--- a/css/event/event.scss
+++ b/css/event/event.scss
@@ -5,7 +5,7 @@
 img {
     object-fit: cover !important;
 }
-
+ 
 
 .Event {
     width: 100%;
@@ -19,7 +19,7 @@ img {
 
         .sorting {
             width: 30%;
-            top: 100px;
+            top: 15vh;
             position: sticky;
             align-self: flex-start;
 
