--- a/css/event/event.css
+++ b/css/event/event.css
@@ -237,7 +237,6 @@ img {
 
 .Event .container .program .keteranganProgram {
   width: 100%;
-  /* background-color: red; */
   padding: 10px 0;
   border-bottom: 4px solid #e4e4e7;
   background-color: var(--putih-f8fafc);
@@ -246,6 +245,7 @@ img {
   position: sticky;
   -ms-flex-item-align: start;
       align-self: flex-start;
+  text-align: center;
   margin-bottom: 30px;
   z-index: 999999;
 }
@@ -268,6 +268,8 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  z-index: 99999999;
+  position: static;
 }
 
 .Event .container .program .sorting .filter {
@@ -289,8 +291,87 @@ img {
 }
 
 .Event .container .program .sorting .filter h2 {
+  margin: 0;
+  padding: 0;
   margin-left: 10px;
   font-size: 1rem;
+}
+
+.Event .container .program .sorting .urutkan {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  color: #4a4b4c;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 7px;
+  background-color: var(--putih);
+  border: var(--border);
+  /* transform: translateY(-10px); */
+}
+
+.Event .container .program .sorting .urutkan h2 {
+  margin: 0;
+  margin-right: 100px;
+  font-size: 1rem;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  /* z-index: 9999999999; */
+  background-color: var(--putih);
+  border: 1px solid #e4e4e7;
+  border-radius: 7px;
+  padding: .5rem 0;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan {
+  width: 100%;
+  padding: 1rem;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active {
+  background-color: #5441fa;
+  border: 1px solid #e4e4e7;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active:hover {
+  background-color: #5441fa;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active span {
+  color: var(--putih);
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan:hover {
+  background-color: #afc0ff;
+  cursor: pointer;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan span {
+  color: #3f3f3f;
+  font-weight: 600;
 }
 
 .Event .container .program .sudahBerakhir {
@@ -425,6 +506,82 @@ img {
 .EventMobile .sorting .filter h2 {
   margin-left: 10px;
   font-size: 1rem;
+}
+
+.EventMobile .sorting .urutkan {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  color: #4a4b4c;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 7px;
+  background-color: var(--putih);
+  border: var(--border);
+  /* transform: translateY(-10px); */
+}
+
+.EventMobile .sorting .urutkan h2 {
+  margin-right: 100px;
+  font-size: 1rem;
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  /* z-index: 9999999999; */
+  background-color: var(--putih);
+  border: 1px solid #e4e4e7;
+  border-radius: 7px;
+  padding: .5rem 0;
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan:hover {
+  background-color: #afc0ff;
+  cursor: pointer;
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active:hover {
+  background-color: #5441fa;
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan {
+  width: 100%;
+  padding: 1rem;
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active {
+  background-color: #5441fa;
+  border: 1px solid #e4e4e7;
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active span {
+  color: var(--putih);
+}
+
+.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan span {
+  color: #3f3f3f;
+  font-weight: 600;
 }
 
 /*  */
@@ -591,82 +748,6 @@ img {
   background-color: #3629a7;
   border: 2px solid #3629a7;
   color: var(--putih);
-}
-
-.EventMobile .sorting .urutkan {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: relative;
-  color: #4a4b4c;
-  padding: 10px 15px;
-  cursor: pointer;
-  border-radius: 7px;
-  background-color: var(--putih);
-  border: var(--border);
-  /* transform: translateY(-10px); */
-}
-
-.EventMobile .sorting .urutkan h2 {
-  margin-right: 100px;
-  font-size: 1rem;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan {
-  display: none;
-  width: 100%;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  /* z-index: 9999999999; */
-  background-color: var(--putih);
-  border: 1px solid #e4e4e7;
-  border-radius: 7px;
-  padding: .5rem 0;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan:hover {
-  background-color: #afc0ff;
-  cursor: pointer;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active:hover {
-  background-color: #5441fa;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan {
-  width: 100%;
-  padding: 1rem;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active {
-  background-color: #5441fa;
-  border: 1px solid #e4e4e7;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active span {
-  color: var(--putih);
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan span {
-  color: #3f3f3f;
-  font-weight: 600;
 }
 
 /* Event Mobile End */
