--- a/css/style.scss
+++ b/css/style.scss
@@ -182,6 +182,8 @@ header {
                         font-weight: 500;
                         color: rgb(218, 218, 218);
 
+                        
+                        &:hover,    
                         &.active {
                             color: var(--putih);
                         }
@@ -257,8 +259,9 @@ header {
                 font-weight: 600;
                 color: #525252;
 
+                &:hover,
                 &.active {
-                    color: #353535;
+                    color: #222222;
                 }
             }
         }
@@ -449,6 +452,7 @@ header {
         height: 200px;
         object-fit: cover;
         cursor: pointer;
+        background-color: var(--putih-900);
     }
 }
 
@@ -1062,6 +1066,7 @@ footer {
                         object-fit: cover;
                         border-radius: 50%;
                         margin-right: 10px;
+                        background-color: var(--putih-900);
                     }
 
                     p {
