--- a/css/riset/riset.css
+++ b/css/riset/riset.css
@@ -180,6 +180,10 @@ section {
   color: var(--putih);
 }
 
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .text-dark {
   color: var(--hitam-santai) !important;
 }
