--- a/css/riset/riset.scss
+++ b/css/riset/riset.scss
@@ -200,6 +200,12 @@ section {
     color: var(--putih);
 }
 
+.text-uppercase {
+    text-transform: uppercase;
+}
+
+
+
 .text-dark {
     color: var(--hitam-santai) !important;
 }
