--- a/css/event/event.css
+++ b/css/event/event.css
@@ -245,7 +245,6 @@ img {
   position: sticky;
   -ms-flex-item-align: start;
       align-self: flex-start;
-  text-align: center;
   margin-bottom: 30px;
   z-index: 999999;
 }
@@ -344,6 +343,12 @@ img {
   border: 1px solid #e4e4e7;
   border-radius: 7px;
   padding: .5rem 0;
+}
+
+.Event .container .program .sorting .urutkan .isiBoxUrutkan.showIsiBoxUrutkan {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .Event .container .program .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan {
@@ -451,7 +456,6 @@ img {
 }
 
 .Event .container .program .masihBerlangsung .perMasihBerlangsung p {
-  font-size: 1rem;
   padding: 10px;
 }
 
@@ -468,293 +472,5 @@ img {
 
 .Event .container .program .masihBerlangsung .perMasihBerlangsung .btnEvent button :hover {
   opacity: .9;
-}
-
-.EventMobile .sorting {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-/* .EventMobile .sorting .filter {} */
-.EventMobile .sorting .filter .tombol {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 10px 15px;
-  color: #4a4b4c;
-  border-radius: 7px;
-  border: var(--border);
-  background-color: var(--putih-f8fafc);
-  cursor: pointer;
-}
-
-.EventMobile .sorting .filter h2 {
-  margin-left: 10px;
-  font-size: 1rem;
-}
-
-.EventMobile .sorting .urutkan {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: relative;
-  color: #4a4b4c;
-  padding: 10px 15px;
-  cursor: pointer;
-  border-radius: 7px;
-  background-color: var(--putih);
-  border: var(--border);
-  /* transform: translateY(-10px); */
-}
-
-.EventMobile .sorting .urutkan h2 {
-  margin-right: 100px;
-  font-size: 1rem;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan {
-  display: none;
-  width: 100%;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  /* z-index: 9999999999; */
-  background-color: var(--putih);
-  border: 1px solid #e4e4e7;
-  border-radius: 7px;
-  padding: .5rem 0;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan:hover {
-  background-color: #afc0ff;
-  cursor: pointer;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active:hover {
-  background-color: #5441fa;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan {
-  width: 100%;
-  padding: 1rem;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active {
-  background-color: #5441fa;
-  border: 1px solid #e4e4e7;
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan.active span {
-  color: var(--putih);
-}
-
-.EventMobile .sorting .urutkan .isiBoxUrutkan .perIsiBoxUrutkan span {
-  color: #3f3f3f;
-  font-weight: 600;
-}
-
-/*  */
-.EventMobile .sorting .filter .containerFilter {
-  /* display: none; */
-  width: 100%;
-  height: 100%;
-  display: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.349);
-  z-index: 99999999999;
-  padding: 1rem;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter {
-  width: 100%;
-  /* height: 400px; */
-  padding: 1rem;
-  border: var(--border);
-  background-color: var(--putih-f8fafc);
-  border-radius: 10px;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .containerTitle {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  font-size: 1.7rem;
-  color: #4a4b4c;
-  margin-bottom: 20px;
-  /* padding: .5rem 1rem; */
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .containerTitle .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .containerTitle .title .icon {
-  font-size: 1.4rem;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .containerTitle .title h4 {
-  font-size: 1.4rem;
-  font-weight: 550;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .containerTitle .close:hover > * {
-  color: #2B46A6;
-  cursor: pointer;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content {
-  width: 100%;
-  height: 300px;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* flex-direction: column; */
-  overflow: auto;
-  /* margin: 10px 0; */
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content .perFIlter {
-  width: 100%;
-  height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  overflow: hidden;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content .perFilter .title {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #4a4b4c;
-  font-weight: 600;
-  text-transform: capitalize;
-  cursor: pointer;
-  background-color: var(--putih);
-  padding: .5rem 1rem;
-  border: 1px solid #e4e4e7;
-  border-radius: 7px;
-  margin: 10px 0;
-  /* position: relative; */
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content .perFilter .isiFilterProgram {
-  /* height: 0; */
-  display: none;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content .perFilter .isiFilterProgram.show {
-  height: 100%;
-  display: inherit;
-  padding: 0 1rem;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content .perFilter .isiFilterProgram .perIsiFilterProgram {
-  margin: 10px 0;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .content .perFilter .isiFilterProgram .perIsiFilterProgram label {
-  margin-left: 10px;
-  font-size: 1rem;
-  font-weight: 500;
-  color: #3f3f3f;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .btnEvent {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 50px;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .btnEvent button {
-  width: calc(90%/2);
-  background-color: var(--putih);
-  border: var(--border);
-  margin: 0 10px;
-  border-radius: 7px;
-  padding: 10px;
-  text-transform: capitalize;
-  font-weight: 600;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-.EventMobile .sorting .filter .containerFilter .boxFilter .btnEvent button:last-child {
-  background-color: #3629a7;
-  border: 2px solid #3629a7;
-  color: var(--putih);
-}
-
-/* Event Mobile End */
-.program .masihBerlangsung .selengkapnya,
-.artikel .container .selengkapnya {
-  margin-top: 70px;
-  width: 100%;
-  text-transform: uppercase;
 }
 /*# sourceMappingURL=event.css.map */
